@@ -3,7 +3,7 @@
 # utility procs formerly in init.tcl dealing with auto execution
 # of commands and can be auto loaded themselves.
 #
-# RCS: @(#) $Id: auto.tcl,v 1.7 2000/02/08 10:06:12 hobbs Exp $
+# RCS: @(#) $Id: auto.tcl,v 1.7.2.1 2002/07/03 20:15:03 dgp Exp $
 #
 # Copyright (c) 1991-1993 The Regents of the University of California.
 # Copyright (c) 1994-1998 Sun Microsystems, Inc.
@@ -60,7 +60,8 @@ proc tcl_findLibrary {basename version patch initScript enVarName varName} {
 
     # The C application may have hardwired a path, which we honor
     
-    if {[info exist the_library] && [string compare $the_library {}]} {
+    set variableSet [info exists the_library]
+    if {$variableSet && [string compare $the_library {}]} {
 	lappend dirs $the_library
     } else {
 
@@ -82,8 +83,10 @@ proc tcl_findLibrary {basename version patch initScript enVarName varName} {
 	# ../../lib/foo1.0	(From bin/arch directory in install hierarchy)
 	# ../library		(From unix directory in build hierarchy)
 	# ../../library		(From unix/arch directory in build hierarchy)
-	# ../../foo1.0b1/library (From unix directory in parallel build hierarchy)
-	# ../../../foo1.0b1/library (From unix/arch directory in parallel build hierarchy)
+	# ../../foo1.0b1/library
+	#		(From unix directory in parallel build hierarchy)
+	# ../../../foo1.0b1/library
+	#		(From unix/arch directory in parallel build hierarchy)
 
         set parentDir [file dirname [file dirname [info nameofexecutable]]]
         set grandParentDir [file dirname $parentDir]
@@ -111,6 +114,9 @@ proc tcl_findLibrary {basename version patch initScript enVarName varName} {
                 append errors "$file: $msg\n$errorInfo\n"
             }
         }
+    }
+    if {!$variableSet} {
+	unset the_library
     }
     set msg "Can't find a usable $initScript in the following directories: \n"
     append msg "    $dirs\n\n"
